added menu for mobile devices and format color

--- a/src/component/footer/Footer.css
+++ b/src/component/footer/Footer.css
@@ -3,10 +3,13 @@
 }
 .Footer {
   margin: 0 auto;
+  background-color: rgba(0, 0, 0, 0.562);
+  color: white;
 }
 .Footer a {
-  color: black;
   font-weight: bold;
+  text-decoration: none;
+  color: white;
 }
 .Footer a:hover {
   text-decoration: underline;
