--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -2,9 +2,10 @@
   box-sizing: border-box;
 }
 .Header {
+  position: relative;
   width: 100%;
   height: 10vh;
-  background-color: cadetblue;
+  background-color: rgb(95, 160, 151);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -20,4 +21,27 @@
 }
 .Header a:active {
   color: rgb(14, 83, 85);
+}
+.Name a {
+  color: white;
+}
+.Header div {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+@media screen and (max-width: 900px) {
+  .Name a {
+    color: white;
+    font-size: 18px;
+    font-weight: bolder;
+  }
+  .Header {
+    height: 40px;
+  }
+  .Header div {
+    margin-left: 0px;
+    margin-right: 10px;
+    overflow: hidden;
+  }
 }
