--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -4,12 +4,13 @@
 .Header {
   position: relative;
   width: 100%;
-  height: 10vh;
+  height: 100%;
   background-color: rgb(95, 160, 151);
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+  margin: 0 auto;
 }
 .Header a {
   text-decoration: none;
