added signup form

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,15 @@
   width: 100%;
   text-align: center;
 }
+.SignUp,
+.Login,
+.Payments,
+.Product,
+.Cart,
+.About,
+.HomePage{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
