--- a/src/component/footer/Footer.css
+++ b/src/component/footer/Footer.css
@@ -3,15 +3,24 @@
 }
 .Footer {
   margin: 0 auto;
-  background-color: rgba(0, 0, 0, 0.562);
-  color: white;
+  /* background-color: rgb(95, 160, 151);
+  color: white; */
 }
 .Footer a {
   font-weight: bold;
   text-decoration: none;
-  color: white;
+  color: rgb(5, 5, 5);
 }
 .Footer a:hover {
   text-decoration: underline;
-  color: black;
+  color: rgb(32, 31, 31);
+}
+.Footer span {
+  display: none;
+}
+@media screen and (max-width: 900px) {
+  .Footer span {
+    display: initial;
+    margin-top: 0px;
+  }
 }
