--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -4,7 +4,7 @@
 .Header {
   position: relative;
   width: 100%;
-  height: 10vh;
+  height: 100%;
   background-color: rgb(95, 160, 151);
   display: flex;
   justify-content: space-evenly;
@@ -33,7 +33,7 @@
 @media screen and (max-width: 900px) {
   .Name a {
     color: white;
-    font-size: 18px;
+    font-size: large;
     font-weight: bolder;
   }
   .Header {
