--- a/src/component/header/Header.css
+++ b/src/component/header/Header.css
@@ -34,7 +34,7 @@
 @media screen and (max-width: 900px) {
   .Name a {
     color: white;
-    font-size: large;
+    font-size: 24px;
     font-weight: bolder;
   }
   .Header {
