--- a/src/component/auth/Login.css
+++ b/src/component/auth/Login.css
@@ -47,6 +47,21 @@
   right: 25%;
   margin-top: 5%;
 }
+.Login a[type="submit"] {
+  max-width: 100%;
+  width: 80%;
+  border-radius: 10px;
+  padding: 5px 10px;
+  background: #ffffff;
+  opacity: 0.7;
+  font-size: 20px;
+  color: rgb(0, 0, 0);
+  position: relative;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  float: right;
+  text-align: center;
+}
 .Login a {
   color: black;
   text-decoration: none;
@@ -68,4 +83,9 @@
     padding: 10px;
     margin: 5px;
   }
+}
+.signUpDiv {
+  position: relative;
+  float: right;
+  text-align: center;
 }
