--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,17 @@
   box-sizing: border-box;
   margin: 0 auto;
 }
-.Footer {
-  position: fixed;
+.Footer p {
+  position: absolute;
   left: 0;
   bottom: 0;
+  width: 100%;
+  text-align: center;
+}
+.footerLinks {
+  position: fixed;
+  left: 0;
+  bottom: 3%;
   width: 100%;
   text-align: center;
 }
