--- a/src/index.css
+++ b/src/index.css
@@ -2,27 +2,36 @@
   box-sizing: border-box;
   margin: 0 auto;
 }
+.App body {
+  overflow: scroll;
+}
 .Footer p {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
+  position: relative;
+  margin-top: 1%;
   text-align: center;
 }
-.footerLinks {
-  position: fixed;
+footer {
+  position: sticky;
   left: 0;
-  bottom: 3%;
+  top: 100%;
   width: 100%;
   text-align: center;
+  margin-bottom: 0px;
+  margin-top: 6rem;
 }
 .About,
 .Cart,
 .Product,
 .HomePage,
 .Login,
-.SignUp {
+.SignUp,
+.Page404 {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.Page404 {
+  flex-direction: column;
+  position: relative;
+  margin: 10% auto;
 }
