made stateful components for signup and login form

--- a/src/component/signup/SignUp.css
+++ b/src/component/signup/SignUp.css
@@ -27,7 +27,12 @@
   color: black;
   text-align: right;
 }
-
+.success {
+  display: flex;
+  position: relative;
+  margin: 1% auto;
+  flex-direction: column;
+}
 .SignUp form,
 .ForgetPassword {
   margin-bottom: 2%;
